Closed Bug 1712148 Opened 4 years ago Closed 4 years ago

Large black rectangles and screen flickering on Adreno 308 Android 9

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: jnicol, Assigned: jnicol)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

See https://github.com/mozilla-mobile/fenix/issues/19360

Reported on a Moto g6 Play (US edition) - Adreno 308, Android 9. Driver version V@331.0

I cannot reproduce on any other Adreno 3xx devices, including a Moto E5 Plus (Adreno 308, Android 8). All of these devices have older versions of Android and presumably older drivers too, so we cannot know for sure whether this only affects Adreno 308, or whether it affects all 3xx on Android 9 / V@331.

We should disable webrender for Adreno 308 + Android 9

In this query we can see that Adreno 308 is by far the most common 3xx GPU on more recent Android versions. So if it did affect all Adreno 3xx on Android 9, it's likely that it would be reported on an Adreno 308. Therefore it seems best to block on all Adreno 3xx on Android 9+.

Due to a report of flashing black rectangles on an Adreno 308 device
running Android 9. As a precaution disable webrender for android 9 and
later for all Adreno 3xx GPUs.

Pushed by jnicol@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/94ba6d523886 Disable webrender for Adreno 3xx devices running Android 9 and later. r=aosmond
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Blocks: 1712290
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: