Bug 1712148 - Disable webrender for Adreno 3xx devices running Android 9 and later. r=aosmond

Due to a report of flashing black rectangles on an Adreno 308 device
running Android 9. As a precaution disable webrender for android 9 and
later for all Adreno 3xx GPUs.

Differential Revision: https://phabricator.services.mozilla.com/D115622